<resources>
    <string name="app_name">Simple Media Player</string>
    <string name="play">Play</string>
    <!--<string name="pause">Pause</string>-->
    <string name="add_sec">+10 sec</string>

    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>

    <string name="song_name">lp_suspicion.mp3</string>
    <string name="music_palyer">Music Palyer</string>
    <string name="tutorials_point">Tutorials point</string>
    <string name="show_example">Show example</string>
</resources>
